all buttons work - changes in index.html and main.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <main>
         <div class="watch">
           <p class="numbers">00:00:00:00</p>
+          <p class="warning">"max 10 time stamps"</p>
         </div>
       </main>
       <!-- bottom 3/4 -->
@@ -29,9 +30,9 @@
       <!-- wyniki + reset przycisk -->
       <!-- bottom 4/4 -->
       <div class="scores">
-        <button class="clear">clear</button>
+        <button class="style clear">clear</button>
         <div class="list">
-          <ul></ul>
+          <ul class="center"></ul>
         </div>
       </div>
     </div>
