fix classes names - index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- wyniki + reset przycisk -->
       <!-- bottom 4/4 -->
       <div class="scores">
-        <button class="style clear">clear</button>
+        <button class="clear">clear</button>
         <div class="list">
           <ul class="center"></ul>
         </div>
